[package]
name = "buzzy-bee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serenity = { version = "0.11", default_features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
serde = "1.0.151"
ron = "0.8"
